Add VoidBody (A physics body with with no collision)
Add Random::Vec2 overload to take vectors
Add overload to Lib::Constrain (Vector)
Add Lib::Map